--- a/legal/Stickman_Dodgeball_Privacy_Policy.html
+++ b/legal/Stickman_Dodgeball_Privacy_Policy.html
@@ -111,7 +111,7 @@
 		</p>
 		<p class="topic-title">CONTACT US</p>
 		<p>
-		If you have questions or comments about this Privacy Policy, please contact us at aerohth@hotmail.com
+		If you have questions or comments about this Privacy Policy, please contact us at aerohth@hotmail.com.
 		</p>
 	</div>
 </body>
