--- a/legal/Electric_Energy_Tycoon_Privacy_Policy.html
+++ b/legal/Electric_Energy_Tycoon_Privacy_Policy.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
-	<title>STICKMAN DODGEBALL PRIVACY POLICY</title>
+	<title>ELECTRIC ENERGY TYCOON PRIVACY POLICY</title>
 	<link rel="shortcut icon" href="favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"> 
